--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,15 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css" />
-    <script src="./scripts/cards.js" defer></script>
-    <script src="./scripts/index.js" defer></script>
   </head>
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
-        <img src="./images/logo.svg" alt="Логотип проекта масто" class="logo header__logo" />
+        <img src="<%=require('./images/logo.svg')%>" alt="Логотип проекта масто" class="logo header__logo" />
       </header>
       <main class="content">
         <section class="profile page__section">
-          <div class="profile__image" style="background-image: url('./images/avatar.jpg')"></div>
+          <div class="profile__image"></div>
           <div class="profile__info">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
             <button class="profile__edit-button" aria-label="Кнопка редактирования профиля" type="button"></button>
@@ -32,6 +29,7 @@
       <footer class="footer page__section">
         <p class="footer__copyright">© 2021 Mesto Russia</p>
       </footer>
+
       <div class="popup popup_type_edit">
         <div class="popup__content">
           <button type="button" aria-label="Кнопка закрытия всплывающего окна" class="popup__close"></button>
@@ -43,6 +41,7 @@
           </form>
         </div>
       </div>
+
       <div class="popup popup_type_new-card">
         <div class="popup__content">
           <button type="button" aria-label="Кнопка закрытия всплывающего окна с контентом" class="popup__close"></button>
@@ -54,6 +53,7 @@
           </form>
         </div>
       </div>
+
       <div class="popup popup_type_image">
         <div class="popup__content popup__content_content_image">
           <button type="button" aria-label="Кнопка закрытия всплывающего окна с изображением" class="popup__close"></button>
