--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,15 @@
         <div class="popup__content">
           <button type="button" aria-label="Кнопка закрытия всплывающего окна" class="popup__close"></button>
           <h3 class="popup__title">Редактировать профиль</h3>
-          <form class="popup__form" name="edit-profile">
-            <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required />
-            <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required />
+          <form class="popup__form" name="edit-profile" novalidate>
+            <label class="form__field">
+            <input type="text" name="name" class="popup__input popup__input_type_name" id="input-name" placeholder="Имя" minlength="2" maxlength="40" pattern="^[a-zA-Zа-яА-яЁё\-\s]+$" required />
+            <span class="popup__input-error input-name-error"></span>
+          </label>
+          <label class="form__field">
+            <input type="text" name="description" class="popup__input popup__input_type_description" id="input-description" placeholder="Занятие" minlength="2" maxlength="200" pattern="^[a-zA-Zа-яА-яЁё\-\s]+$" required />
+            <span class="popup__input-error input-description-error"></span>
+          </label>
             <button type="submit" class="button popup__button">Сохранить</button>
           </form>
         </div>
