--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
         <section class="profile page__section">
           <div class="profile__image"></div>
           <div class="profile__info">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <h1 class="profile__title"></h1>
             <button class="profile__edit-button" aria-label="Кнопка редактирования профиля" type="button"></button>
-            <p class="profile__description">Исследователь океана</p>
+            <p class="profile__description"></p>
           </div>
           <button class="profile__add-button" aria-label="Кнопка добавления профиля" type="button"></button>
         </section>
@@ -37,7 +37,7 @@
           <fieldset class="form__set">
           <form class="popup__form" name="edit-profile" novalidate>
             <label class="form__field">
-            <input type="text" name="name" class="popup__input popup__input_type_name" id="input-name" placeholder="Имя" minlength="2" maxlength="40" pattern="^[a-zA-Zа-яА-яЁё\-\s]+$" required />
+            <input type="text" name="name" class="popup__input popup__input_type_name" id="input-name" placeholder="Имя" minlength="2" maxlength="40" pattern="^[a-zA-Zа-яА-яЁё\-\s]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required />
             <span class="popup__input-error input-name-error"></span>
           </label>
           <label class="form__field">
@@ -55,9 +55,15 @@
           <button type="button" aria-label="Кнопка закрытия всплывающего окна с контентом" class="popup__close"></button>
           <h3 class="popup__title">Новое место</h3>
           <fieldset class="form__set">
-          <form class="popup__form" name="new-place">
-            <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required />
-            <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required />
+          <form class="popup__form" name="new-place" novalidate>
+            <label class="form__field">
+            <input type="text" name="place-name" class="popup__input popup__input_type_card-name" id="input-card-name" placeholder="Название" minlength="2" maxlength="30" pattern="^[a-zA-Zа-яА-яЁё\-\s]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required />
+            <span class="popup__input-error input-card-name-error"></span>
+          </label>
+          <label class="form__field">
+            <input type="url" name="link" class="popup__input popup__input_type_url" id="input_type_url" placeholder="Ссылка на картинку" required />
+            <span class="popup__input-error input_type_url-error"></span>
+          </label>
             <button type="submit" class="button popup__button">Сохранить</button>
           </form>
         </fieldset>
@@ -79,7 +85,11 @@
         <button type="button" aria-label="Кнопка удаления карточки" class="card__delete-button"></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
+          <div class="block__like">
           <button type="button" aria-label="Кнопка лайка карточки" class="card__like-button"></button>
+          <span class="like-counter">1</span>
+          </div>
+          
         </div>
       </li>
     </template>
