--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
           <h2 class="card__title"></h2>
           <div class="block__like">
           <button type="button" aria-label="Кнопка лайка карточки" class="card__like-button"></button>
-          <span class="like-counter">1</span>
+          <span class="like-counter"></span>
           </div>
           
         </div>
