--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,14 @@
         </div>
       </div>
 
+      <div class="popup popup_delete_image">
+        <div class="popup__content popup__accept-delete-img">
+          <h2 class="popup__accept-delete-title">Вы уверены?</h2>
+          <button type="button" class="button popup__button popup__accept-button">Да</button>
+          <button type="button" aria-label="Кнопка закрытия всплывающего окна с изображением" class="popup__close"></button>
+        </div>
+      </div>
+
       <div class="popup popup_type_image">
         <div class="popup__content popup__content_content_image">
           <button type="button" aria-label="Кнопка закрытия всплывающего окна с изображением" class="popup__close"></button>
