--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,22 @@
         </div>
       </div>
 
+      <div class="popup popup_type_edit-avatar">
+        <div class="popup__content">
+          <button type="button" aria-label="Кнопка закрытия всплывающего окна с контентом" class="popup__close"></button>
+          <h3 class="popup__title">Обновить аватар</h3>
+          <fieldset class="form__set">
+          <form class="popup__form" name="new-place" novalidate>
+            <label class="form__field">
+              <input type="url" name="link" class="popup__input popup__input_type_url" id="input_type_avatar" placeholder="Ссылка на картинку" required />
+            <span class="popup__input-error input-card-name-error"></span>
+          </label>
+            <button type="submit" class="button popup__button">Сохранить</button>
+          </form>
+        </fieldset>
+        </div>
+      </div>
+
       <div class="popup popup_type_image">
         <div class="popup__content popup__content_content_image">
           <button type="button" aria-label="Кнопка закрытия всплывающего окна с изображением" class="popup__close"></button>
