Готовый проект перед ревью (1)

--- a/src/index.html
+++ b/src/index.html
@@ -35,18 +35,39 @@
           <button type="button" aria-label="Кнопка закрытия всплывающего окна" class="popup__close"></button>
           <h3 class="popup__title">Редактировать профиль</h3>
           <fieldset class="form__set">
-          <form class="popup__form" name="edit-profile" novalidate>
-            <label class="form__field">
-            <input type="text" name="name" class="popup__input popup__input_type_name" id="input-name" placeholder="Имя" minlength="2" maxlength="40" pattern="^[a-zA-Zа-яА-яЁё\-\s]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required />
-            <span class="popup__input-error input-name-error"></span>
-          </label>
-          <label class="form__field">
-            <input type="text" name="description" class="popup__input popup__input_type_description" id="input-description" placeholder="Занятие" minlength="2" maxlength="200" pattern="^[a-zA-Zа-яА-яЁё\-\s]+$" required />
-            <span class="popup__input-error input-description-error"></span>
-          </label>
-            <button type="submit" class="button popup__button">Сохранить</button>
-          </form>
-        </fieldset>
+            <form class="popup__form" name="edit-profile" novalidate>
+              <label class="form__field">
+                <input
+                  type="text"
+                  name="name"
+                  class="popup__input popup__input_type_name"
+                  id="input-name"
+                  placeholder="Имя"
+                  minlength="2"
+                  maxlength="40"
+                  pattern="^[a-zA-Zа-яА-яЁё\-\s]+$"
+                  data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+                  required
+                />
+                <span class="popup__input-error input-name-error"></span>
+              </label>
+              <label class="form__field">
+                <input
+                  type="text"
+                  name="description"
+                  class="popup__input popup__input_type_description"
+                  id="input-description"
+                  placeholder="Занятие"
+                  minlength="2"
+                  maxlength="200"
+                  pattern="^[a-zA-Zа-яА-яЁё\-\s]+$"
+                  required
+                />
+                <span class="popup__input-error input-description-error"></span>
+              </label>
+              <button type="submit" class="button popup__button">Сохранить</button>
+            </form>
+          </fieldset>
         </div>
       </div>
 
@@ -55,18 +76,29 @@
           <button type="button" aria-label="Кнопка закрытия всплывающего окна с контентом" class="popup__close"></button>
           <h3 class="popup__title">Новое место</h3>
           <fieldset class="form__set">
-          <form class="popup__form" name="new-place" novalidate>
-            <label class="form__field">
-            <input type="text" name="place-name" class="popup__input popup__input_type_card-name" id="input-card-name" placeholder="Название" minlength="2" maxlength="30" pattern="^[a-zA-Zа-яА-яЁё\-\s]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required />
-            <span class="popup__input-error input-card-name-error"></span>
-          </label>
-          <label class="form__field">
-            <input type="url" name="link" class="popup__input popup__input_type_url" id="input_type_url" placeholder="Ссылка на картинку" required />
-            <span class="popup__input-error input_type_url-error"></span>
-          </label>
-            <button type="submit" class="button popup__button">Сохранить</button>
-          </form>
-        </fieldset>
+            <form class="popup__form" name="new-place" novalidate>
+              <label class="form__field">
+                <input
+                  type="text"
+                  name="place-name"
+                  class="popup__input popup__input_type_card-name"
+                  id="input-card-name"
+                  placeholder="Название"
+                  minlength="2"
+                  maxlength="30"
+                  pattern="^[a-zA-Zа-яА-яЁё\-\s]+$"
+                  data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+                  required
+                />
+                <span class="popup__input-error input-card-name-error"></span>
+              </label>
+              <label class="form__field">
+                <input type="url" name="link" class="popup__input popup__input_type_url" id="input_type_url" placeholder="Ссылка на картинку" required />
+                <span class="popup__input-error input_type_url-error"></span>
+              </label>
+              <button type="submit" class="button popup__button">Сохранить</button>
+            </form>
+          </fieldset>
         </div>
       </div>
 
@@ -83,14 +115,14 @@
           <button type="button" aria-label="Кнопка закрытия всплывающего окна с контентом" class="popup__close"></button>
           <h3 class="popup__title">Обновить аватар</h3>
           <fieldset class="form__set">
-          <form class="popup__form" name="new-place" novalidate>
-            <label class="form__field">
-              <input type="url" name="link" class="popup__input popup__input_type_url" id="input_type_avatar" placeholder="Ссылка на картинку" required />
-            <span class="popup__input-error input-card-name-error"></span>
-          </label>
-            <button type="submit" class="button popup__button">Сохранить</button>
-          </form>
-        </fieldset>
+            <form class="popup__form" name="new-place" novalidate>
+              <label class="form__field">
+                <input type="url" name="link" class="popup__input popup__input_type_avatar" id="input_type_avatar" placeholder="Ссылка на картинку" required />
+                <span class="popup__input-error input_type_avatar-error"></span>
+              </label>
+              <button type="submit" class="button popup__button">Сохранить</button>
+            </form>
+          </fieldset>
         </div>
       </div>
 
@@ -110,10 +142,9 @@
         <div class="card__description">
           <h2 class="card__title"></h2>
           <div class="block__like">
-          <button type="button" aria-label="Кнопка лайка карточки" class="card__like-button"></button>
-          <span class="like-counter"></span>
+            <button type="button" aria-label="Кнопка лайка карточки" class="card__like-button"></button>
+            <span class="like-counter"></span>
           </div>
-          
         </div>
       </li>
     </template>
