Правка перед ревью 08.02

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,7 @@
                   minlength="2"
                   maxlength="200"
                   pattern="^[a-zA-Zа-яА-яЁё\-\s]+$"
+                  data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
                   required
                 />
                 <span class="popup__input-error input-description-error"></span>
